tests/cases/ok/dict_items.p4
def main() -> None:
    colors = {"apple": "red", "sky": "blue"}
    print(colors.items())
