tests/cases/fail/infer_empty_dict_local.p4
def main() -> None:
    items = {}
    print(items)
